@@ -1,5 +1,5 @@
 #
-# "$Id: Makedefs.in,v 1.36.2.20 2003/11/30 00:16:06 mike Exp $"
+# "$Id: Makedefs.in,v 1.36.2.21 2004/02/26 16:59:02 mike Exp $"
 #
 #   Common makefile definitions for the Common UNIX Printing System (CUPS).
 #
@@ -145,7 +145,6 @@ LIBDIR		=	$(BUILDROOT)$(libdir)
 LOCALEDIR	= 	$(BUILDROOT)@CUPS_LOCALEDIR@
 LOGDIR		= 	$(BUILDROOT)@CUPS_LOGDIR@
 MANDIR		=	$(BUILDROOT)@mandir@
-PAMDIR		=	$(BUILDROOT)@PAMDIR@
 PMANDIR		=	$(BUILDROOT)@PMANDIR@
 REQUESTS	= 	$(BUILDROOT)@CUPS_REQUESTS@
 SBINDIR		=	$(BUILDROOT)@sbindir@
@@ -158,6 +157,10 @@ CAT5EXT		=	@CAT5EXT@
 CAT8EXT		=	@CAT8EXT@
 MAN8EXT		=	@MAN8EXT@
 MAN8DIR		=	@MAN8DIR@
+
+PAMDIR		=	$(BUILDROOT)@PAMDIR@
+PAMFILE		=	@PAMFILE@
+
 
 #
 # Rules...
@@ -184,5 +187,5 @@ MAN8DIR		=	@MAN8DIR@
 
 
 #
-# End of "$Id: Makedefs.in,v 1.36.2.20 2003/11/30 00:16:06 mike Exp $"
+# End of "$Id: Makedefs.in,v 1.36.2.21 2004/02/26 16:59:02 mike Exp $"
 #
