@@ -1,2 +1,0 @@
-auth	required	@PAMMOD@ nullok shadow
-account	required	@PAMMOD@
