@@ -1,9 +1,9 @@
 dnl
-dnl "$Id: cups-image.m4,v 1.2.2.3 2003/01/17 15:30:27 mike Exp $"
+dnl "$Id: cups-image.m4,v 1.2.2.4 2004/02/26 16:59:02 mike Exp $"
 dnl
 dnl   Image library stuff for the Common UNIX Printing System (CUPS).
 dnl
-dnl   Copyright 1997-2003 by Easy Software Products, all rights reserved.
+dnl   Copyright 1997-2004 by Easy Software Products, all rights reserved.
 dnl
 dnl   These coded instructions, statements, and computer programs are the
 dnl   property of Easy Software Products and are protected by Federal
@@ -78,5 +78,5 @@ AC_SUBST(EXPORT_LIBZ)
 AC_CHECK_HEADER(stdlib.h,AC_DEFINE(HAVE_STDLIB_H))
 
 dnl
-dnl End of "$Id: cups-image.m4,v 1.2.2.3 2003/01/17 15:30:27 mike Exp $".
+dnl End of "$Id: cups-image.m4,v 1.2.2.4 2004/02/26 16:59:02 mike Exp $".
 dnl
