@@ -1,9 +1,9 @@
 dnl
-dnl "$Id: cups-libtool.m4,v 1.2.2.4 2003/04/14 19:56:02 mike Exp $"
+dnl "$Id: cups-libtool.m4,v 1.2.2.5 2004/02/26 16:59:02 mike Exp $"
 dnl
 dnl   Libtool stuff for the Common UNIX Printing System (CUPS).
 dnl
-dnl   Copyright 1997-2003 by Easy Software Products, all rights reserved.
+dnl   Copyright 1997-2004 by Easy Software Products, all rights reserved.
 dnl
 dnl   These coded instructions, statements, and computer programs are the
 dnl   property of Easy Software Products and are protected by Federal
@@ -45,5 +45,5 @@ if test x$LIBTOOL != x; then
 fi
 
 dnl
-dnl End of "$Id: cups-libtool.m4,v 1.2.2.4 2003/04/14 19:56:02 mike Exp $".
+dnl End of "$Id: cups-libtool.m4,v 1.2.2.5 2004/02/26 16:59:02 mike Exp $".
 dnl
