@@ -1,9 +1,9 @@
 dnl
-dnl "$Id: cups-manpages.m4,v 1.5.2.3 2003/04/14 19:56:02 mike Exp $"
+dnl "$Id: cups-manpages.m4,v 1.5.2.4 2004/02/26 16:59:02 mike Exp $"
 dnl
 dnl   Manpage stuff for the Common UNIX Printing System (CUPS).
 dnl
-dnl   Copyright 1997-2003 by Easy Software Products, all rights reserved.
+dnl   Copyright 1997-2004 by Easy Software Products, all rights reserved.
 dnl
 dnl   These coded instructions, statements, and computer programs are the
 dnl   property of Easy Software Products and are protected by Federal
@@ -100,5 +100,5 @@ AC_SUBST(MAN8EXT)
 AC_SUBST(MAN8DIR)
 
 dnl
-dnl End of "$Id: cups-manpages.m4,v 1.5.2.3 2003/04/14 19:56:02 mike Exp $".
+dnl End of "$Id: cups-manpages.m4,v 1.5.2.4 2004/02/26 16:59:02 mike Exp $".
 dnl
