@@ -1,9 +1,9 @@
 dnl
-dnl "$Id: cups-openssl.m4,v 1.4.2.10 2003/09/17 19:36:07 mike Exp $"
+dnl "$Id: cups-openssl.m4,v 1.4.2.11 2004/02/26 16:59:02 mike Exp $"
 dnl
 dnl   OpenSSL/GNUTLS stuff for the Common UNIX Printing System (CUPS).
 dnl
-dnl   Copyright 1997-2003 by Easy Software Products, all rights reserved.
+dnl   Copyright 1997-2004 by Easy Software Products, all rights reserved.
 dnl
 dnl   These coded instructions, statements, and computer programs are the
 dnl   property of Easy Software Products and are protected by Federal
@@ -108,5 +108,5 @@ AC_SUBST(EXPORT_SSLLIBS)
 
 
 dnl
-dnl End of "$Id: cups-openssl.m4,v 1.4.2.10 2003/09/17 19:36:07 mike Exp $".
+dnl End of "$Id: cups-openssl.m4,v 1.4.2.11 2004/02/26 16:59:02 mike Exp $".
 dnl
