@@ -1,9 +1,9 @@
 dnl
-dnl "$Id: cups-opsys.m4,v 1.5.2.6 2003/09/15 20:33:50 mike Exp $"
+dnl "$Id: cups-opsys.m4,v 1.5.2.7 2004/02/26 16:59:02 mike Exp $"
 dnl
 dnl   Operating system stuff for the Common UNIX Printing System (CUPS).
 dnl
-dnl   Copyright 1997-2003 by Easy Software Products, all rights reserved.
+dnl   Copyright 1997-2004 by Easy Software Products, all rights reserved.
 dnl
 dnl   These coded instructions, statements, and computer programs are the
 dnl   property of Easy Software Products and are protected by Federal
@@ -87,5 +87,5 @@ AC_DEFINE_UNQUOTED(CUPS_DEFAULT_USER, "$CUPS_USER")
 AC_DEFINE_UNQUOTED(CUPS_DEFAULT_GROUP, "$CUPS_GROUP")
 
 dnl
-dnl "$Id: cups-opsys.m4,v 1.5.2.6 2003/09/15 20:33:50 mike Exp $"
+dnl "$Id: cups-opsys.m4,v 1.5.2.7 2004/02/26 16:59:02 mike Exp $"
 dnl
