@@ -1,9 +1,9 @@
 dnl
-dnl "$Id: cups-scripting.m4,v 1.1.2.1 2003/03/14 18:10:40 mike Exp $"
+dnl "$Id: cups-scripting.m4,v 1.1.2.2 2004/02/26 16:59:02 mike Exp $"
 dnl
 dnl   Scripting configuration stuff for the Common UNIX Printing System (CUPS).
 dnl
-dnl   Copyright 1997-2003 by Easy Software Products, all rights reserved.
+dnl   Copyright 1997-2004 by Easy Software Products, all rights reserved.
 dnl
 dnl   These coded instructions, statements, and computer programs are the
 dnl   property of Easy Software Products and are protected by Federal
@@ -87,5 +87,5 @@ if test "x$CUPS_PYTHON" != x; then
 fi
 
 dnl
-dnl End of "$Id: cups-scripting.m4,v 1.1.2.1 2003/03/14 18:10:40 mike Exp $".
+dnl End of "$Id: cups-scripting.m4,v 1.1.2.2 2004/02/26 16:59:02 mike Exp $".
 dnl
