@@ -1,9 +1,9 @@
 dnl
-dnl "$Id: cups-sharedlibs.m4,v 1.6.2.16 2003/07/23 20:08:02 mike Exp $"
+dnl "$Id: cups-sharedlibs.m4,v 1.6.2.17 2004/02/26 16:59:02 mike Exp $"
 dnl
 dnl   Shared library support for the Common UNIX Printing System (CUPS).
 dnl
-dnl   Copyright 1997-2003 by Easy Software Products, all rights reserved.
+dnl   Copyright 1997-2004 by Easy Software Products, all rights reserved.
 dnl
 dnl   These coded instructions, statements, and computer programs are the
 dnl   property of Easy Software Products and are protected by Federal
@@ -152,5 +152,5 @@ AC_SUBST(IMGLIBS)
 AC_SUBST(EXPORT_LDFLAGS)
 
 dnl
-dnl End of "$Id: cups-sharedlibs.m4,v 1.6.2.16 2003/07/23 20:08:02 mike Exp $".
+dnl End of "$Id: cups-sharedlibs.m4,v 1.6.2.17 2004/02/26 16:59:02 mike Exp $".
 dnl
