@@ -1,5 +1,5 @@
 #
-# "$Id: cups.list.in,v 1.13.2.22 2004/02/26 16:07:08 mike Exp $"
+# "$Id: cups.list.in,v 1.13.2.23 2004/02/26 16:59:02 mike Exp $"
 #
 #   ESP Package Manager (EPM) file list for the Common UNIX Printing
 #   System (CUPS).
@@ -294,17 +294,7 @@ c 0600 root sys $SERVERROOT/mime.types conf/mime.types
 
 %if PAMDIR
 d 0555 root sys $PAMDIR -
-
-%system linux
-# Linux almost always supports PAM...
-c 0644 root sys $PAMDIR/cups conf/pam.conf
-
-%system irix
-# IRIX doesn't normally support PAM, but the freeware project
-# includes a version of PAM that can be used...
-c 0644 root sys $PAMDIR/cups conf/pam.irix
-
-%system all
+c 0644 root sys $PAMDIR/cups conf/@PAMFILE@
 %endif
 
 # Developer files
@@ -415,5 +405,5 @@ f 0444 root sys $AMANDIR/man$MAN8DIR/lpmove.$MAN8EXT man/lpmove.man
 i 0555 root sys cups cups.sh
 
 #
-# End of "$Id: cups.list.in,v 1.13.2.22 2004/02/26 16:07:08 mike Exp $".
+# End of "$Id: cups.list.in,v 1.13.2.23 2004/02/26 16:59:02 mike Exp $".
 #
