@@ -3,6 +3,7 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.21rc1
 
+	- Added PAM support for Darwin/MacOS X (STR #550)
 	- The web interface now provides a "Set As Default"
 	  button to set the default printer or class on a server
 	  (STR #577)
